2009-12-30  Mario Carrion  <mario@carrion.mx>

	* barecity_1.5/header.php: Removed commented code.
	* barecity_1.5/mariocarrion.xcf: Original gimp image.

2009-12-30  Mario Carrion  <mario@carrion.mx>

	* Initial import.