@@ -259,11 +259,17 @@ ul.post-meta span.post-meta-key {
 }
 
 #sidebar ul {
-	color: #ccc;
+	color: #666;
 	list-style-type: none;
 	margin: 0;
 	padding-left: 3px;
 	text-transform: lowercase;
+	font-weight: bold;
+}
+
+#sidebar ul li table td {
+	color: #666;
+	font-weight: normal;
 }
 
 #sidebar h2 {
@@ -276,6 +282,7 @@ ul.post-meta span.post-meta-key {
 
 #sidebar ul li {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: bold;
 	margin-top: 10px;
 	padding-bottom: 2px;
 }
@@ -292,10 +299,11 @@ ul.post-meta span.post-meta-key {
 #sidebar ul ul li {
 	border: 0;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-weight: normal;
 	letter-spacing: 0;
 	margin-top: 0;
 	padding: 0;
-	padding-left: 3px;
+	padding-left: 10px;
 }
 
 #sidebar ul ul li a {
@@ -315,6 +323,7 @@ ul.post-meta span.post-meta-key {
 #wp-calendar {
 	empty-cells: show;
 	font-size: 11px;
+	color: #666;
 	margin: 0;
 	width: 90%;	
 }
@@ -340,9 +349,10 @@ ul.post-meta span.post-meta-key {
 }
 
 #wp-calendar caption {
-	color: #000;
+	font-size: 12px;
+	color: #666;
 	text-align: left;
-	font-weight: normal;
+	font-weight: bold;
 
 }
 
